--- a/processador.html
+++ b/processador.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-	<title>Titulo**</title>
+	<title>TecnoLoja</title>
 	<link rel="stylesheet" type="text/css" href="main.css" />
 	<link rel="stylesheet" type="text/css" href="produtos.css" />
 </head>
 
 <body>
 	<div class="topo">
-		<div class="titulo">Titulo_Loja</div>
+		<div class="titulo">TecnoLoja</div>
 		<nav class="navegacao">
 			<div class="link"><a href="index.html">Principal</a></div>
 			<div class="link"><a href="categorias.html">Produtos</a></div>
@@ -26,6 +26,7 @@
 				<tr>
 					<td ><img class="foto_produto" src="imagens/i5intel.jpg"/></td>
 					<td>
+						<div class="produto_titulo">Processador</div>
 						<div class="produto_nome">Intel Core I5 4440 LGA 1150</div>
 						<div class="preco_anterior">de R$999,00</div>
 						<div class="por_apenas">por apenas </div>
@@ -37,6 +38,7 @@
 				<tr>
 					<td ><img class="foto_produto" src="imagens/fx8370.jpg"/></td>
 					<td>
+						<div class="produto_titulo">Processador</div>
 						<div class="produto_nome">AMD FX 8370 AM3+</div>
 						<div class="preco_anterior">de R$899,00</div>
 						<div class="por_apenas">por apenas </div>
@@ -46,45 +48,49 @@
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/FX_6300.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_titulo">Processador</div>
+						<div class="produto_nome">AMD FX-6300 Black Edition Cache 8MB 3.5Ghz AM3+</div>
+						<div class="preco_anterior">de R$ 575,29</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 489,00</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/i3-6100.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_titulo">Processador</div>
+						<div class="produto_nome">Intel Core i3-6100 Skylake Cache 3MB 3.7Ghz LGA 1151</div>
+						<div class="preco_anterior">de R$ 738,71</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 627,90</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/i7-6700.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_titulo">Processador</div>
+						<div class="produto_nome">Intel Core i7-6700 Cache 8MB Skylake 6a Geração Quad-Core 3.4 GHz LGA 1151</div>
+						<div class="preco_anterior">de R$ 1.870,47</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 1.589,90</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/fx4300.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_titulo">Processador</div>
+						<div class="produto_nome">AMD FX 4300 Black Edition Cache 8Mb 3.8GHz AM3+ </div>
+						<div class="preco_anterior">de R$ 494,00</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 419,90</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
