--- a/ram.html
+++ b/ram.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-	<title>Titulo**</title>
+	<title>TecnoLoja</title>
 	<link rel="stylesheet" type="text/css" href="main.css" />
 	<link rel="stylesheet" type="text/css" href="produtos.css" />
 </head>
 
 <body>
 	<div class="topo">
-		<div class="titulo">Titulo_Loja</div>
+		<div class="titulo">TecnoLoja</div>
 		<nav class="navegacao">
 			<div class="link"><a href="index.html">Principal</a></div>
 			<div class="link"><a href="categorias.html">Produtos</a></div>
@@ -24,71 +24,59 @@
 			<table>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/fury1.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">Memória Kingston HyperX FURY 4GB 1866Mhz DDR3 CL10 Black</div>
+						<div class="preco_anterior">de R$ 144,59 </div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 122,90</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/fury2.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">Memória Kingston HyperX FURY 8GB (2x4GB) 2133Mhz DDR4 CL14 Black</div>
+						<div class="preco_anterior">de R$ 529,29</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 449,90</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/Corsair1.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">Memória Corsair Vengeance 4GB 1600MHz DDR3 CL9 Black</div>
+						<div class="preco_anterior">de R$ 162,24 </div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 137,90</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/Corsair2.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">Memória Corsair 4GB 1600Mhz DDR3</div>
+						<div class="preco_anterior">de R$ 161,90</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 137,62</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/hyperx2.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">Memória Kingston HyperX Predator 8GB (2x4GB) 2800Mhz DDR3</div>
+						<div class="preco_anterior">de R$ 1.470,90</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 1.250,27</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
-					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
 			</table>
 		</div>
 	</div>
