Added files via upload

--- a/categorias.html
+++ b/categorias.html
@@ -73,6 +73,16 @@
 					</td>
 				</tr>
 
+				<tr>
+					<td >
+						<a href="notebook.html"><img class="foto_produto" src="imagens/notebook.png"/></a>
+					</td>
+					<td>
+						<div class="produto_titulo"><a href="notebook.html">Port&aacuteteis</a></div>
+						<div class="cat_descricao">Notebooks/Laptops.</div>
+					</td>
+				</tr>
+
 			</table>
 		</div>
 	</div>
