--- a/notebook.html
+++ b/notebook.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-	<title>Titulo**</title>
+	<title>TecnoLoja</title>
 	<link rel="stylesheet" type="text/css" href="main.css" />
 	<link rel="stylesheet" type="text/css" href="produtos.css" />
 </head>
 
 <body>
 	<div class="topo">
-		<div class="titulo">Titulo_Loja</div>
+		<div class="titulo">TecnoLoja</div>
 		<nav class="navegacao">
 			<div class="link"><a href="index.html">Principal</a></div>
 			<div class="link"><a href="categorias.html">Produtos</a></div>
