--- a/notebook.html
+++ b/notebook.html
@@ -24,67 +24,67 @@
 			<table>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/noteacer.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">Notebook Acer Aspire com Intel core i3-501U 4GB HD 1000GB DDR3 Windows 10 Tela 14.0</div>
+						<div class="preco_anterior">de R$ 2.854,00</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 2.425,90</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/notevaio.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">Notebook VAIO Fit Intel Core i5-5200U 4GB HD 1TB LCD 15.6 Windows 10</div>
+						<div class="preco_anterior">de R$ 3.555,44</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 3.199,90</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/notepositivo.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">Notebook Positivo Premium XRi7150 i3-4005U 4GB HD 500GB Linux Tela 14</div>
+						<div class="preco_anterior">de R$ 2.201,90</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 1.871,62</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/mac.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">MacBook Apple Intel Core M Dual Core 12 8GB 512GB Dourado</div>
+						<div class="preco_anterior">de R$ 8.711,90</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 8.276,30</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/noteasus.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">Notebook ASUS com Intel Core I5 5200U 4+4 GB HD 1TB Windows 10 Tela 15,6´ Nvidia Geforce 940M Preto</div>
+						<div class="preco_anterior">de R$ 5.815,90</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 4.943,51</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/placeholder.jpg"/></td>
+					<td ><img class="foto_produto" src="imagens/notehp.jpg"/></td>
 					<td>
-						<div class="produto_nome">placeholder</div>
-						<div class="preco_anterior">de R$899,00</div>
+						<div class="produto_nome">Notebook HP 240 G3 Core i5-4210U 4GB 500GB Tela 14´ Windows 8.1</div>
+						<div class="preco_anterior">de R$ 3.899,90</div>
 						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$799,00</div>
+						<div class="preco_atual">R$ 3.314,91</div>
 						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
 					</td>
 				</tr>
