Added files via upload

--- a/categorias.html
+++ b/categorias.html
@@ -13,9 +13,9 @@
 		<nav class="navegacao">
 			<div class="link"><a href="index.html">Principal</a></div>
 			<div class="link"><a href="categorias.html">Produtos</a></div>
-			<div class="link"><a href="sobre.html">Sobre</a></div>
 			<div class="link"><a href="login.html">Login</a></div>
 			<div class="link"><a href="registro.html">Registro</a></div>
+			<div class="link"><a href="sobre.html">Sobre</a></div>
 		</nav>
 	</div>
 
@@ -38,7 +38,7 @@
 						<a href="processador.html"><img class="foto_produto" src="imagens/processador.jpg"/></a>
 					</td>
 					<td>
-						<div class="produto_titulo"><a href="processador.html">Processadores</a></div>
+						<div class="cat_produto_titulo"><a href="processador.html">Processadores</a></div>
 						<div class="cat_descricao">Processadores Intel e AMD com as melhores ofertas.</div>
 					</td>
 				</tr>
@@ -48,7 +48,7 @@
 						<a href="ram.html"><img class="foto_produto" src="imagens/ram.jpg"/></a>
 					</td>
 					<td>
-						<div class="produto_titulo"><a href="ram.html">Mem&oacuterias RAM</a></div>
+						<div class="cat_produto_titulo"><a href="ram.html">Mem&oacuterias RAM</a></div>
 						<div class="cat_descricao">Mem&oacuterias DDR4 para melhor performance.</div>
 					</td>
 				</tr>
@@ -58,7 +58,7 @@
 						<a href="placa_mae.html"><img class="foto_produto" src="imagens/placa_mae.jpg"/></a>
 					</td>
 					<td>
-						<div class="produto_titulo"><a href="placa_mae.html">Placa M&atildee</a></div>
+						<div class="cat_produto_titulo"><a href="placa_mae.html">Placa M&atildee</a></div>
 						<div class="cat_descricao">Os menores pre&ccedilos.</div>
 					</td>
 				</tr>
@@ -68,7 +68,7 @@
 						<a href="fonte.html"><img class="foto_produto" src="imagens/fonte.jpg"/></a>
 					</td>
 					<td>
-						<div class="produto_titulo"><a href="fonte.html">Fontes</a></div>
+						<div class="cat_produto_titulo"><a href="fonte.html">Fontes</a></div>
 						<div class="cat_descricao">Fontes de alimenta&ccedil&atildeo.</div>
 					</td>
 				</tr>
@@ -78,7 +78,7 @@
 						<a href="notebook.html"><img class="foto_produto" src="imagens/notebook.png"/></a>
 					</td>
 					<td>
-						<div class="produto_titulo"><a href="notebook.html">Port&aacuteteis</a></div>
+						<div class="cat_produto_titulo"><a href="notebook.html">Port&aacuteteis</a></div>
 						<div class="cat_descricao">Notebooks/Laptops.</div>
 					</td>
 				</tr>
