--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 				</tr>
 
 				<tr>
-					<td ><img class="foto_produto" src="imagens/gygabyte.jpg"/></td>
+					<td >
+						<img class="foto_produto" src="imagens/gygabyte.jpg"/>
+					</td>
 					<td>
-						<div class="produto_nome">Placa-M&atildee GIGABYTE p/ Intel LGA 1151 ATX GA-H170-GAMING 3</div>
+						<div class="produto_titulo">Placa-M&atildee</div>
+						<div class="produto_nome">GIGABYTE p/ Intel LGA 1151 ATX GA-H170-GAMING 3</div>
 						<div class="preco_anterior">de R$ 941,06</div>
 						<div class="por_apenas">por apenas </div>
 						<div class="preco_atual">R$ 799,90</div>
