Added files via upload

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<script type="text/jscript" src="banner.js"></script>
 </head>
 
-<body>
-
+<body onload="Tempo()">
+    <div class="Hora" id="lugar">Tempo</div>
+    <script type="text/javascript"; src="hora.js"></script>
 
 
 	<div class="topo">
