--- a/login.html
+++ b/login.html
@@ -7,7 +7,10 @@
 	<script type="text/javascript" src="login_registro.js"></script>
 </head>
 
-<body>
+<body onload="Tempo()">
+    <div class="Hora" id="lugar">Tempo</div>
+    <script type="text/javascript"; src="hora.js"></script>
+    
 	<div class="topo">
 		<div class="titulo">TecnoLoja</div>
 		<nav class="navegacao">
