--- a/processador.html
+++ b/processador.html
@@ -6,7 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="produtos.css" />
 </head>
 
-<body>
+<body onload="Tempo()">
+    <div class="Hora" id="lugar">Tempo</div>
+    <script type="text/javascript"; src="hora.js"></script>
+    
 	<div class="topo">
 		<div class="titulo">TecnoLoja</div>
 		<nav class="navegacao">
