Added files via upload

--- a/categorias.html
+++ b/categorias.html
@@ -4,15 +4,15 @@
 	<title>TecnoLoja</title>
 	<link rel="stylesheet" type="text/css" href="main.css" />
 	<link rel="stylesheet" type="text/css" href="produtos.css" />
-	<link rel="stylesheet" type="text/css" href="categorias.css" />
+	<link href="banner.css" rel="stylesheet" type="text/css" />
+	<script type="text/jscript" src="banner.js"></script>
+	<script type="text/javascript"; src="hora.js"></script>
 </head>
 
 <body onload="Tempo()">
-    <div class="Hora" id="lugar">Tempo</div>
-    <script type="text/javascript"; src="hora.js"></script>
-    
 	<div class="topo">
 		<div class="titulo">TecnoLoja</div>
+		<div class="Hora" id="lugar">Tempo</div>
 		<nav class="navegacao">
 			<div class="link"><a href="index.html">Principal</a></div>
 			<div class="link"><a href="categorias.html">Produtos</a></div>
