Added files via upload

--- a/categorias.html
+++ b/categorias.html
@@ -4,6 +4,7 @@
 	<title>TecnoLoja</title>
 	<link rel="stylesheet" type="text/css" href="main.css" />
 	<link rel="stylesheet" type="text/css" href="produtos.css" />
+	<link rel="stylesheet" type="text/css" href="categorias.css" />
 	<link href="banner.css" rel="stylesheet" type="text/css" />
 	<script type="text/jscript" src="banner.js"></script>
 	<script type="text/javascript"; src="hora.js"></script>
