--- a/index.html
+++ b/index.html
@@ -10,40 +10,42 @@
 </head>
 
 <body onload="Tempo()">
-	<div class="topo">
-		<div class="titulo">TecnoLoja</div>
-		<div class="Hora" id="lugar">Tempo</div>
-		<nav class="navegacao">
-			<div class="link"><a href="index.html">Principal</a></div>
-			<div class="link"><a href="categorias.html">Produtos</a></div>
-			<div class="link"><a href="login.html">Login</a></div>
-			<div class="link"><a href="registro.html">Registro</a></div>
-			<div class="link"><a href="sobre.html">Sobre</a></div>
-		</nav>
-	</div>
+	<div class="corpo_todo">
+		<div class="topo">
+			<div class="titulo">TecnoLoja</div>
+			<div class="Hora" id="lugar">Tempo</div>
+			<nav class="navegacao">
+				<div class="link"><a href="index.html">Principal</a></div>
+				<div class="link"><a href="categorias.html">Produtos</a></div>
+				<div class="link"><a href="login.html">Login</a></div>
+				<div class="link"><a href="registro.html">Registro</a></div>
+				<div class="link"><a href="sobre.html">Sobre</a></div>
+			</nav>
+		</div>
 
-	<div class="principal">
-		<div class="corpo">
-			<div class="titulo_corpo">Ofertas Imperd&iacuteveis:</div>
-			
-			<div id="banner" class="banner">
-				<div id="banner_img">
-			   	  	<img src="banner_img/1.jpg" width="760" height="350px" border="0" alt="Banner">
-			    </div>
-			    <div id="botoes">
-			    		<a href="javascript:void(0);" id="banner_img_1" class="hover" onclick="mudaImg('0');">1</a>
-			        	<a href="javascript:void(0);" id="banner_img_2" onclick="mudaImg('1');">2</a>
-						<a href="javascript:void(0);" id="banner_img_3" onclick="mudaImg('2');">3</a>
-			        	<a href="javascript:void(0);" id="banner_img_4" onclick="mudaImg('3');">4</a>
-			    </div>
+		<div class="principal">
+			<div class="corpo">
+				<div class="titulo_corpo">Ofertas Imperd&iacuteveis:</div>
+				
+				<div id="banner" class="banner">
+					<div id="banner_img">
+				   	  	<img src="banner_img/1.jpg" width="760" height="350px" border="0" alt="Banner">
+				    </div>
+				    <div id="botoes">
+				    		<a href="javascript:void(0);" id="banner_img_1" class="hover" onclick="mudaImg('0');">1</a>
+				        	<a href="javascript:void(0);" id="banner_img_2" onclick="mudaImg('1');">2</a>
+							<a href="javascript:void(0);" id="banner_img_3" onclick="mudaImg('2');">3</a>
+				        	<a href="javascript:void(0);" id="banner_img_4" onclick="mudaImg('3');">4</a>
+				    </div>
+
+				</div>
 
 			</div>
-
 		</div>
+		<footer>
+			<div class="rodape">Trabalho de Internet &amp Web 2015.2</div>
+		</footer>
 	</div>
-	<footer>
-		<div class="rodape">Trabalho de Internet &amp Web 2015.2</div>
-	</footer>
 
 </body>
 
