--- a/notebook.html
+++ b/notebook.html
@@ -10,95 +10,97 @@
 </head>
 
 <body onload="Tempo()">
-	<div class="topo">
-		<div class="titulo">TecnoLoja</div>
-		<div class="Hora" id="lugar">Tempo</div>
-		<nav class="navegacao">
-			<div class="link"><a href="index.html">Principal</a></div>
-			<div class="link"><a href="categorias.html">Produtos</a></div>
-			<div class="link"><a href="login.html">Login</a></div>
-			<div class="link"><a href="registro.html">Registro</a></div>
-			<div class="link"><a href="sobre.html">Sobre</a></div>
-		</nav>
-	</div>
-
-	<div class="principal">
-		<div class="corpo">
-			<div class="titulo_corpo">Port&aacuteteis:</div>
-			<table>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/noteacer.jpg"/></td>
-					<td>
-						<div class="produto_nome">Notebook Acer Aspire com Intel core i3-501U 4GB HD 1000GB DDR3 Windows 10 Tela 14.0</div>
-						<div class="preco_anterior">de R$ 2.854,00</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 2.425,90</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/notevaio.jpg"/></td>
-					<td>
-						<div class="produto_nome">Notebook VAIO Fit Intel Core i5-5200U 4GB HD 1TB LCD 15.6 Windows 10</div>
-						<div class="preco_anterior">de R$ 3.555,44</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 3.199,90</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/notepositivo.jpg"/></td>
-					<td>
-						<div class="produto_nome">Notebook Positivo Premium XRi7150 i3-4005U 4GB HD 500GB Linux Tela 14</div>
-						<div class="preco_anterior">de R$ 2.201,90</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 1.871,62</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/mac.jpg"/></td>
-					<td>
-						<div class="produto_nome">MacBook Apple Intel Core M Dual Core 12 8GB 512GB Dourado</div>
-						<div class="preco_anterior">de R$ 8.711,90</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 8.276,30</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/noteasus.jpg"/></td>
-					<td>
-						<div class="produto_nome">Notebook ASUS com Intel Core I5 5200U 4+4 GB HD 1TB Windows 10 Tela 15,6´ Nvidia Geforce 940M Preto</div>
-						<div class="preco_anterior">de R$ 5.815,90</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 4.943,51</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/notehp.jpg"/></td>
-					<td>
-						<div class="produto_nome">Notebook HP 240 G3 Core i5-4210U 4GB 500GB Tela 14´ Windows 8.1</div>
-						<div class="preco_anterior">de R$ 3.899,90</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 3.314,91</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-			</table>
+	<div class="corpo_todo">
+		<div class="topo">
+			<div class="titulo">TecnoLoja</div>
+			<div class="Hora" id="lugar">Tempo</div>
+			<nav class="navegacao">
+				<div class="link"><a href="index.html">Principal</a></div>
+				<div class="link"><a href="categorias.html">Produtos</a></div>
+				<div class="link"><a href="login.html">Login</a></div>
+				<div class="link"><a href="registro.html">Registro</a></div>
+				<div class="link"><a href="sobre.html">Sobre</a></div>
+			</nav>
 		</div>
+
+		<div class="principal">
+			<div class="corpo">
+				<div class="titulo_corpo">Port&aacuteteis:</div>
+				<table>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/noteacer.jpg"/></td>
+						<td>
+							<div class="produto_nome">Notebook Acer Aspire com Intel core i3-501U 4GB HD 1000GB DDR3 Windows 10 Tela 14.0</div>
+							<div class="preco_anterior">de R$ 2.854,00</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 2.425,90</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/notevaio.jpg"/></td>
+						<td>
+							<div class="produto_nome">Notebook VAIO Fit Intel Core i5-5200U 4GB HD 1TB LCD 15.6 Windows 10</div>
+							<div class="preco_anterior">de R$ 3.555,44</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 3.199,90</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/notepositivo.jpg"/></td>
+						<td>
+							<div class="produto_nome">Notebook Positivo Premium XRi7150 i3-4005U 4GB HD 500GB Linux Tela 14</div>
+							<div class="preco_anterior">de R$ 2.201,90</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 1.871,62</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/mac.jpg"/></td>
+						<td>
+							<div class="produto_nome">MacBook Apple Intel Core M Dual Core 12 8GB 512GB Dourado</div>
+							<div class="preco_anterior">de R$ 8.711,90</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 8.276,30</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/noteasus.jpg"/></td>
+						<td>
+							<div class="produto_nome">Notebook ASUS com Intel Core I5 5200U 4+4 GB HD 1TB Windows 10 Tela 15,6´ Nvidia Geforce 940M Preto</div>
+							<div class="preco_anterior">de R$ 5.815,90</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 4.943,51</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/notehp.jpg"/></td>
+						<td>
+							<div class="produto_nome">Notebook HP 240 G3 Core i5-4210U 4GB 500GB Tela 14´ Windows 8.1</div>
+							<div class="preco_anterior">de R$ 3.899,90</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 3.314,91</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+				</table>
+			</div>
+		</div>
+		<footer>
+			<div class="rodape">Trabalho de Internet &amp Web 2015.2</div>
+		</footer>
 	</div>
-	<footer>
-		<div class="rodape">Trabalho de Internet &amp Web 2015.2</div>
-	</footer>
 
 </body>
 
