--- a/placa_video.html
+++ b/placa_video.html
@@ -10,103 +10,105 @@
 </head>
 
 <body onload="Tempo()">
-	<div class="topo">
-		<div class="titulo">TecnoLoja</div>
-		<div class="Hora" id="lugar">Tempo</div>
-		<nav class="navegacao">
-			<div class="link"><a href="index.html">Principal</a></div>
-			<div class="link"><a href="categorias.html">Produtos</a></div>
-			<div class="link"><a href="login.html">Login</a></div>
-			<div class="link"><a href="registro.html">Registro</a></div>
-			<div class="link"><a href="sobre.html">Sobre</a></div>
-		</nav>
-	</div>
-
-	<div class="principal">
-		<div class="corpo">
-			<div class="titulo_corpo">Placas de v&iacutedeo:</div>
-			<table>
-
-				<tr>
-					<td >
-						<img class="foto_produto" src="imagens/geforce_gtx_960_2.jpg"/>
-					</td>
-					<td>
-						<div class="produto_titulo">Placa de V&iacutedeo</div>
-						<div class="produto_nome">ASUS GeForce GTX960 2GB STRIX</div>
-						<div class="preco_anterior">de R$ 799,00</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 699,00</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/gtx970.jpg"/></td>
-					<td>
-						<div class="produto_titulo">Placa de V&iacutedeo</div>
-						<div class="produto_nome">VGA EVGA GeForce GTX970 4GB</div>
-						<div class="preco_anterior">de R$ 1.599,88</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 1.359,90</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/GTX980.jpg"/></td>
-					<td>
-						<div class="produto_titulo">Placa de V&iacutedeo</div>
-						<div class="produto_nome">VGA GigaByte GeForce GTX980 WaterForce 3</div>
-						<div class="preco_anterior">de R$ 15.294,00</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 12.999,90</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/r9_380.jpg"/></td>
-					<td>
-						<div class="produto_titulo">Placa de V&iacutedeo</div>
-						<div class="produto_nome">GA Gigabyte AMD Radeon R9 380 2GB</div>
-						<div class="preco_anterior">de R$ 1.270,47</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 1.079,90</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/r7_250.jpg"/></td>
-					<td>
-						<div class="produto_titulo">Placa de V&iacutedeo</div>
-						<div class="produto_nome">VGA GigaByte Radeon R7 250 2GB DDR3 OC</div>
-						<div class="preco_anterior">de R$ 514,00 </div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 436,90</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-				<tr>
-					<td ><img class="foto_produto" src="imagens/titanx.jpg"/></td>
-					<td>
-						<div class="produto_titulo">Placa de V&iacutedeo</div>
-						<div class="produto_nome">VGA ASUS GeForce GTX Titan X 12GB GDDR5 384-Bits</div>
-						<div class="preco_anterior">de R$ 7.119,90</div>
-						<div class="por_apenas">por apenas </div>
-						<div class="preco_atual">R$ 6.051,91</div>
-						<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
-					</td>
-				</tr>
-
-			</table>
+	<div class="corpo_todo">
+		<div class="topo">
+			<div class="titulo">TecnoLoja</div>
+			<div class="Hora" id="lugar">Tempo</div>
+			<nav class="navegacao">
+				<div class="link"><a href="index.html">Principal</a></div>
+				<div class="link"><a href="categorias.html">Produtos</a></div>
+				<div class="link"><a href="login.html">Login</a></div>
+				<div class="link"><a href="registro.html">Registro</a></div>
+				<div class="link"><a href="sobre.html">Sobre</a></div>
+			</nav>
 		</div>
+
+		<div class="principal">
+			<div class="corpo">
+				<div class="titulo_corpo">Placas de v&iacutedeo:</div>
+				<table>
+
+					<tr>
+						<td >
+							<img class="foto_produto" src="imagens/geforce_gtx_960_2.jpg"/>
+						</td>
+						<td>
+							<div class="produto_titulo">Placa de V&iacutedeo</div>
+							<div class="produto_nome">ASUS GeForce GTX960 2GB STRIX</div>
+							<div class="preco_anterior">de R$ 799,00</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 699,00</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/gtx970.jpg"/></td>
+						<td>
+							<div class="produto_titulo">Placa de V&iacutedeo</div>
+							<div class="produto_nome">VGA EVGA GeForce GTX970 4GB</div>
+							<div class="preco_anterior">de R$ 1.599,88</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 1.359,90</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/GTX980.jpg"/></td>
+						<td>
+							<div class="produto_titulo">Placa de V&iacutedeo</div>
+							<div class="produto_nome">VGA GigaByte GeForce GTX980 WaterForce 3</div>
+							<div class="preco_anterior">de R$ 15.294,00</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 12.999,90</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/r9_380.jpg"/></td>
+						<td>
+							<div class="produto_titulo">Placa de V&iacutedeo</div>
+							<div class="produto_nome">GA Gigabyte AMD Radeon R9 380 2GB</div>
+							<div class="preco_anterior">de R$ 1.270,47</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 1.079,90</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/r7_250.jpg"/></td>
+						<td>
+							<div class="produto_titulo">Placa de V&iacutedeo</div>
+							<div class="produto_nome">VGA GigaByte Radeon R7 250 2GB DDR3 OC</div>
+							<div class="preco_anterior">de R$ 514,00 </div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 436,90</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+					<tr>
+						<td ><img class="foto_produto" src="imagens/titanx.jpg"/></td>
+						<td>
+							<div class="produto_titulo">Placa de V&iacutedeo</div>
+							<div class="produto_nome">VGA ASUS GeForce GTX Titan X 12GB GDDR5 384-Bits</div>
+							<div class="preco_anterior">de R$ 7.119,90</div>
+							<div class="por_apenas">por apenas </div>
+							<div class="preco_atual">R$ 6.051,91</div>
+							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+						</td>
+					</tr>
+
+				</table>
+			</div>
+		</div>
+		<footer>
+			<div class="rodape">Trabalho de Internet &amp Web 2015.2</div>
+		</footer>
 	</div>
-	<footer>
-		<div class="rodape">Trabalho de Internet &amp Web 2015.2</div>
-	</footer>
 
 </body>
 
