--- a/sobre.html
+++ b/sobre.html
@@ -10,32 +10,34 @@
 </head>
 
 <body onload="Tempo()">
-	<div class="topo">
-		<div class="titulo">TecnoLoja</div>
-		<div class="Hora" id="lugar">Tempo</div>
-		<nav class="navegacao">
-			<div class="link"><a href="index.html">Principal</a></div>
-			<div class="link"><a href="categorias.html">Produtos</a></div>
-			<div class="link"><a href="login.html">Login</a></div>
-			<div class="link"><a href="registro.html">Registro</a></div>
-			<div class="link"><a href="sobre.html">Sobre</a></div>
-		</nav>
-	</div>
-
-	<div class="principal">
-		<div class="corpo">
-			<div class="titulo_corpo">Sobre:</div>
-			<div class="texto_sobre">
-				<p>
-					Site referente ao projeto de Internet &amp Web.
-				</p>
-			</div>
-
+	<div class="corpo_todo">
+		<div class="topo">
+			<div class="titulo">TecnoLoja</div>
+			<div class="Hora" id="lugar">Tempo</div>
+			<nav class="navegacao">
+				<div class="link"><a href="index.html">Principal</a></div>
+				<div class="link"><a href="categorias.html">Produtos</a></div>
+				<div class="link"><a href="login.html">Login</a></div>
+				<div class="link"><a href="registro.html">Registro</a></div>
+				<div class="link"><a href="sobre.html">Sobre</a></div>
+			</nav>
 		</div>
+
+		<div class="principal">
+			<div class="corpo">
+				<div class="titulo_corpo">Sobre:</div>
+				<div class="texto_sobre">
+					<p>
+						Site referente ao projeto de Internet &amp Web.
+					</p>
+				</div>
+
+			</div>
+		</div>
+		<footer>
+			<div class="rodape">Trabalho de Internet &amp Web 2015.2</div>
+		</footer>
 	</div>
-	<footer>
-		<div class="rodape">Trabalho de Internet &amp Web 2015.2</div>
-	</footer>
 
 </body>
 
