Added files via upload

--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,16 @@
 				<div class="titulo_corpo">Sobre:</div>
 				<div class="texto_sobre">
 					<p>
-						Site referente ao projeto de Internet &amp Web.
+						Site do projeto de Internet &amp Web.<br />
+						Referente &agrave nota AB2. <br />
+						Professor Leandro Sales.
+					</p>
+					<p>
+						Turma de Ci&ecircncia da Computa&ccedil&atildeo 2015.2 <br />
+						IC/UFAL.
+					</p>
+					<p>
+						Equipe: Jonathan Alves; Marcelo Lima.
 					</p>
 				</div>
 
