--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
 	<link href="banner.css" rel="stylesheet" type="text/css" />
 	<script type="text/jscript" src="banner.js"></script>
 	<script type="text/javascript"; src="hora.js"></script>
+		<script type="text/javascript"; src="login_registro.js"></script>
 </head>
 
 <body onload="Tempo()">
@@ -26,7 +27,7 @@
 		<div class="principal">
 			<div class="corpo">
 				<div class="titulo_corpo">Login:</div>
-				<form action="index.html" onsubmit="return checar_login();">
+				<form action="erro_login.html" onsubmit="return checar_login();">
 					<table class="tabela_login">
 						<tr>
 							<td>
