Added files via upload

--- a/fonte.html
+++ b/fonte.html
@@ -29,68 +29,68 @@
 				<table>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/fc.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/fc.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Fonte Corsair CX-600W</div>
 							<div class="preco_anterior">de R$ 383,41</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 325,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/fo.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/fo.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Fonte OnePower ATX 500W</div>
 							<div class="preco_anterior">de R$ 161,06</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 136,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/fb.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/fb.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Fonte Corsair 750W ATX RM750X 80PLUS Gold Ativo Modular</div>
 							<div class="preco_anterior">de R$ 1.044,59</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 887,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/fe.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/fe.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Fonte ATX EVGA 600W 80 Plus Bronze</div>
 							<div class="preco_anterior">de R$ 376,35</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 319,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/ft.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/ft.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Fonte Thermaltake ATX 2.3/80 1200w Toughpower Grand Gold</div>
 							<div class="preco_anterior">de R$ 1.780,90</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 1.513,77</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/fx.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/fx.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Fonte XFX XT 400W Full Wired 80 Plus Bronze</div>
 							<div class="preco_anterior">de R$ 251,65</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 213,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
