--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 
 				</div>
 
+				<div class="texto_principal">
+					<p>
+						Cheque j&aacute nossa lista de <a href="categorias.html">produtos</a>!
+					</p>
+				</div>
+
 			</div>
 		</div>
 		<footer>
