--- a/placa_video.html
+++ b/placa_video.html
@@ -30,7 +30,7 @@
 
 					<tr>
 						<td >
-							<img class="foto_produto" src="imagens/geforce_gtx_960_2.jpg"/>
+							<a href="erro_carrinho.html"><img class="foto_produto" src="imagens/geforce_gtx_960_2.jpg"/></a>
 						</td>
 						<td>
 							<div class="produto_titulo">Placa de V&iacutedeo</div>
@@ -38,67 +38,67 @@
 							<div class="preco_anterior">de R$ 799,00</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 699,00</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/gtx970.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/gtx970.jpg"/></a></td>
 						<td>
 							<div class="produto_titulo">Placa de V&iacutedeo</div>
 							<div class="produto_nome">VGA EVGA GeForce GTX970 4GB</div>
 							<div class="preco_anterior">de R$ 1.599,88</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 1.359,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/GTX980.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/GTX980.jpg"/></a></td>
 						<td>
 							<div class="produto_titulo">Placa de V&iacutedeo</div>
 							<div class="produto_nome">VGA GigaByte GeForce GTX980 WaterForce 3</div>
 							<div class="preco_anterior">de R$ 15.294,00</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 12.999,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/r9_380.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/r9_380.jpg"/></a></td>
 						<td>
 							<div class="produto_titulo">Placa de V&iacutedeo</div>
 							<div class="produto_nome">GA Gigabyte AMD Radeon R9 380 2GB</div>
 							<div class="preco_anterior">de R$ 1.270,47</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 1.079,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/r7_250.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/r7_250.jpg"/></a></td>
 						<td>
 							<div class="produto_titulo">Placa de V&iacutedeo</div>
 							<div class="produto_nome">VGA GigaByte Radeon R7 250 2GB DDR3 OC</div>
 							<div class="preco_anterior">de R$ 514,00 </div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 436,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/titanx.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/titanx.jpg"/></a></td>
 						<td>
 							<div class="produto_titulo">Placa de V&iacutedeo</div>
 							<div class="produto_nome">VGA ASUS GeForce GTX Titan X 12GB GDDR5 384-Bits</div>
 							<div class="preco_anterior">de R$ 7.119,90</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 6.051,91</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
