--- a/placa_mae.html
+++ b/placa_mae.html
@@ -29,68 +29,68 @@
 				<table>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/asrock.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/asrock.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Placa-M&atildee ASRock p/ AMD FM2+ mATX FM2A55M-VG3+ D-Sub</div>
 							<div class="preco_anterior">de R$ 362,24</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 307,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/asus.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/asus.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Placa-M&atildee ASUS p/ Intel LGA 1151 mATX H170M-E D3</div>
 							<div class="preco_anterior">de R$ 729,29</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 619,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/evga.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/evga.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Placa-M&atildee EVGA p/Intel LGA 1151 ATX Z170 CLASSIFIED K</div>
 							<div class="preco_anterior">de R$ 3.529,29</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 2.999,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/gygabyte.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/gygabyte.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Placa-M&atildee GIGABYTE p/ Intel LGA 1151 ATX GA-H170-GAMING 3</div>
 							<div class="preco_anterior">de R$ 941,06</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 799,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/msi.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/msi.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Placa-M&atildee MSI p/ Intel LGA 1151 ATX Z170A XPower Gaming</div>
 							<div class="preco_anterior">de R$ 1.976,35</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 1.679,90</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td ><img class="foto_produto" src="imagens/msi2.jpg"/></td>
+						<td ><a href="erro_carrinho.html"><img class="foto_produto" src="imagens/msi2.jpg"/></a></td>
 						<td>
 							<div class="produto_nome">Placa-M&atildee MSI p/ AMD FM2+ ATX A68HM-E33</div>
 							<div class="preco_anterior">de R$ 269,90</div>
 							<div class="por_apenas">por apenas </div>
 							<div class="preco_atual">R$ 229,41</div>
-							<div class="add_carrinho">Adicionar ao carrinho<img src="imagens/carrinho.jpg"/></div>
+							<div class="add_carrinho"><a href="erro_carrinho.html">Adicionar ao carrinho</a><a href="erro_carrinho.html"><img src="imagens/carrinho.jpg"/></a></div>
 						</td>
 					</tr>
 					
